fixed the overflow problem on the landing page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
     background-image: url('../images/heroImg1.png');
     background-position: center;
     background-size: cover;
+    overflow: hidden;
 }
 
 /* Smooth scroll behavior */
